[fix] overflow issue (padding was added to the flex container instead of items within the container)

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,7 +8,10 @@
   align-items: center;
   justify-content: space-between;
   box-shadow: 0rem 0rem 4rem rgba(0 0 0 / 35%);
-  padding: 0.5rem 1rem;
+}
+
+.item {
+  padding: 0.2rem 1rem;
 }
 
 .figure {
